--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Upload Release Asset
+      - name: Upload Release Asset tgz
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
@@ -52,6 +52,17 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: wildfly-20.0.1.Final_custom.tar.gz
           asset_name: wildfly-20.0.1.Final_custom.tar.gz
+          asset_content_type: application/gzip
+
+      - name: Upload Release Asset zip
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: wildfly-20.0.1.Final_custom.zip
+          asset_name: wildfly-20.0.1.Final_custom.zip
           asset_content_type: application/zip
 
 
